@@ -96,5 +96,8 @@ sub test_interfaces
 # ---
 
 
-$tree = &xst_xml_scan ("/etc/alchemist/namespace/printconf/local.adl");
-&xst_debug_print_struct ($tree);
+# $tree = &xst_xml_scan ("/etc/alchemist/namespace/printconf/local.adl");
+# &xst_debug_print_struct ($tree);
+
+print &xst_parse_xml ("/etc/alchemist/namespace/printconf/local.adl",
+                      "/adm_context/datatree/printconf/print_queues/lpekk/filter_type", "VALUE") . "\n";
