@@ -1,3 +1,9 @@
+2001-07-10  Hans Petter Jansson  <hpj@ximian.com>
+
+	* xml.pl.in (xst_xml_get_attribute): Implement.
+
+	* parse.pl.in (xst_parse_xml): Implement in full.
+
 2001-07-09  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* network-conf.in (xml_print): gatewaydev support.
